Fix enroll button alignment with flex-grow on features list

--- a/src/components/ProgramPage.css
+++ b/src/components/ProgramPage.css
@@ -786,6 +786,7 @@
     padding: 0;
     margin-bottom: 30px;
     text-align: left;
+    flex-grow: 1;
 }
 
 .plan-features li {
